--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,8 +16,6 @@ h1{
 
 /* CSS files add styling rules to your content */
 
-
-
 h3 {
   text-align: center;
   text-shadow: 2px 2px 5px grey;
@@ -32,22 +30,19 @@ h5 {
     color: #ffffff;
    text-align: center;
 }
-div2 {
+/* div2 {
   box-shadow: 5px 5px 16px grey;
 }
 div3 {
   text-align: center;
 
-}
+} */
 p {
     color: #ffffff;
     font-size:20px;
-  /*text-align: center;
-    margin-top: 20px;
-  margin-bottom: 20px;
-  margin-right: 150px;
-*/
+    text-align: center;
 }
+
 #a{
   font-size: 60px;
 
@@ -137,6 +132,7 @@ button {
   border: none;
   cursor: pointer;
   width: 100%;
+  text-align: center; 
 }
 
 /* Add a hover effect for buttons */
@@ -165,6 +161,7 @@ img.avatar {
 
 /* Add padding to containers */
 .container {
+  text-align: center;
   padding: 16px;
 }
 
@@ -299,50 +296,9 @@ hr{
   text-align: justify;
   color:black;
 }
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
-.flip-card {
-  background-color: transparent;
-  width: 300px;
-  height: 200px;
-  border: 1px solid #f1f1f1;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
-}
-
-/* This container is needed to position the front and back side */
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-/* Position the front and back side */
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-/* Style the front side (fallback if image is missing) */
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-}
-
-/* Style the back side */
-.flip-card-back {
-  background-color: dodgerblue;
-  color: white;
-  transform: rotateY(180deg);
-}
 .card-deck{
   display:inline-grid;
+}
+a {
+  text-align: center;
 }
