--- a/templates/login.html
+++ b/templates/login.html
@@ -7,16 +7,16 @@
 </html>
 
 
-  <div3 class="container">
+  <div class="container">
     <label for="uname"><b>Username: </b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <input type="text" placeholder="Enter Username" name="uname" required><br><br>
 
     <label for="psw"><b>Password: </b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password" name="psw" required><br><br>
 
     <button type="submit"><a href="/home">  login </a></button>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
-  </div3>
+  </div>
 </form>
