--- a/templates/mice.html
+++ b/templates/mice.html
@@ -57,33 +57,33 @@
 
 <div class="card-deck">
   <div class="card">
-    <img src="https://thehappypuppysite.com/wp-content/uploads/2017/03/dog-sizes-1.jpg" class="card-img-top" alt="...">
+    <img src="https://squeaksandnibbles.com/wp-content/uploads/2018/02/mouse-names-header.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title">Basics</h12>
-      <p15 class="card-text">:Dogs should be handled with much care. Dogs need lots of attention, which ranks their difficulty at hard.
+      <p15 class="card-text">:Mouse are very small, but need a bit of attention which ranks their difficulty at medium.
       </p15>
   </div>
   <div class="card">
-    <img src="https://puplifetoday.com/wp-content/uploads/2018/07/dog-food-for-puppies.jpg" class="card-img-top" alt="...">
+    <img src="https://i.pinimg.com/originals/9a/06/df/9a06df328a4de479e421932a895cd2fe.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title">Food</h12>
-      <p15 class="card-text">:Dogs should be fed one bowl a day according to their size. They should eat dry or wet commercial dog foods. Try to avoid human food, and give thems snacks meant for dogs.</p15>
+      <p15 class="card-text">: Mice should eat commercial mouse food. You can give them tiny amounts of non citrus vegetables and fruits.</p15>
     </div>
   </div>
   <div class="card">
-    <img src="https://www.abc.net.au/cm/rimage/10697242-16x9-xlarge.jpg?v=2" class="card-img-top" alt="...">
+    <img src="http://www.bestfunforall.com/better/imgs/Mouse%20in%20a%20cup%20wallpaper%20%201.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title">Needs</h12>
-      <p15 class="card-text"> : Dogs will need to be groomed. Smaller dogs often require more grooming than large dogs. Every dog needs to be spayed or nutered as well </p15>
+      <p15 class="card-text"> : Mice require a nice clean cage with bedding,toys, and a water bottle feeder. They do not need to be bathed, but require a light sponge cleaning every 1-2 months. Mice usally keep themselves clean. </p15>
     </div>
   </div>
 </div>
 <div class="card-deck">
   <div class="card">
-    <img src="https://i.ytimg.com/vi/yfiAwfFO5gs/maxresdefault.jpg" class="card-img-top" alt="...">
+    <img src="http://66.media.tumblr.com/dd1ad1113d4c91b14c8f7e56e22bdc2e/tumblr_n1q3gc3RW01r6qtjuo1_500.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h12 class="card-title">DANGERS</h12>
-      <p15 class="card-text"> : There are many things that are harmful to a dog, but be especially careful with what you feed your dog. You should never feed your dog grapes, rasisns, or chocolates. This will cause serious pain for your dog, and maybe even death.
+      <p15 class="card-text"> :  You should never feed your mouse choclate. This will cause serious pain for your mouse, and maybe even death. </p15>
   </div>
 
 <!-- <div class="flip-card">
